<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/ProductName"/>

        <EditText
            android:id="@+id/product_desc"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/ProductDesc"/>

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:inputType="number"
            android:hint="@string/ProductPrice"/>

        <EditText
            android:id="@+id/product_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:inputType="number"
            android:hint="@string/ProductStock"/>

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/confirm_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"/>

        </RadioGroup>
        <TextView
            android:id="@+id/image_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/image_standby"/>

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="72dp"
            android:layout_height="72dp" />

        <Button
            android:id="@+id/image_input_view"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cameraBtn"
            android:onClick="sendCameraIntent"/>

        <Button
            android:id="@+id/add_Product"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addBtn"
            android:onClick="insert"/>

        <Button
            android:id="@+id/edit_Product"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editBtn"
            android:onClick="update"/>

        <Button
            android:id="@+id/delete_Product"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteBtn"
            android:onClick="destroy"/>

    </LinearLayout>

</ScrollView>
