<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/product_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Description"
            android:layout_marginBottom="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Price"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/product_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Stock"
            android:layout_marginBottom="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/confirm_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"/>

        </RadioGroup>
        <Button
            android:id="@+id/increase_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/increaseStock"
            android:onClick="stockIncrement"/>
        <Button
            android:id="@+id/decrease_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            tools:text="sale"
            android:onClick="stockDecrement"/>
        <Button
            android:id="@+id/delete_Product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteBtn"
            android:onClick="destroy"/>
        <Button
            android:id="@+id/order_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/orderBtn"
            android:layout_marginTop="24dp"
            android:onClick="orderProduct"/>

    </LinearLayout>

</ScrollView>
